<resources>
    <string name="app_name">MyCart</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="i_agree_to_the_terms_amp_condition">I agree To The <u> Terms &amp; Condition</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>

</resources>